upload_db_maintain

--- a/宏观因子构建.ipynb
+++ b/宏观因子构建.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "1bc40c7b",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "3c267d48",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        ".Data=[OK!]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,12 +550,12 @@
    "id": "078a868c",
    "metadata": {},
    "source": [
-    "# Macro_raw_factor"
+    "# 低频因子构建"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cf755b29",
    "metadata": {},
    "outputs": [],
@@ -566,24 +566,158 @@
     "因此在使用PCA找到原始宏观因子以后，我们需要做一下几点：\n",
     "1. 寻找合适的的宏观经济原始指标\n",
     "2. 选择资产组合来拟合原始经济指标\n",
-    "\n",
     "follow国泰海通，在经济原始指标选取中，考虑如下：\n",
     "1.增长因子：考虑将PMI的同比差分(M0017126*)、\n",
     "          固定资产投资额完成额同比(累计同比M0000273)、\n",
     "          社会消费品零售总额同比(当月同比M0001428,累计同比M0001440)、\n",
-    "          进出口金额同比(当月同比M0000605,累计同比M0043657)四个同比指标根据波动率倒数进行加权构造\n",
-    "2.通胀因子：使用CPI同比(当月同比M0000612,累计同比M0000729)和PPI同比(当月同比M0001227,累计同比M0001244)按波动率导数进行加权构造\n",
+    "          进出口金额同比(当月同比M0000605,累计同比M0043657)四个同比指标根据波动率进行加权构造\n",
+    "2.通胀因子：使用CPI同比(当月同比M0000612,累计同比M0000729)和PPI同比(当月同比M0001227,累计同比M0001244)按波动率倒数进行加权构造\n",
     "3.利率因子：使用10年期国债收益率(S0059749)表示\n",
     "4.信用因子：使用3年期AA中短期票据收益率(S0059717)和3年期国开债收益率(M1004265)的差来刻画信用利差的变化\n",
     "5.汇率因子：使用美元指数(M0000271)来代替汇率因子\n",
     "6.流动性因子：使用M2同比(M0001385)和社融存量同比(M5525763)的差来构造\n",
     "'''\n",
     "macro_data = w.edb(\"M0017126,M0000273,M0001428,M0001440,M0000605,M0043657,M0000612,M0001227,M0001244,M0000729,S0059749,S0059717,M1004265,M0000271,M0001385,M5525763\",\n",
-    "                    \"2006-06-01\", \n",
-    "                    \"2023-06-01\",\n",
+    "                    \"2025-09-30\", \n",
+    "                    \"2025-11-18\",\n",
     "                    \"Fill=Previous\",\n",
     "                    \"Period=M\",\n",
-    "                    usedf=True)[1]"
+    "                    usedf=True)[1]\n",
+    "macro_data.index=pd.to_datetime(macro_data.index)\n",
+    "macro_data_M = macro_data.resample('ME').last().dropna(how='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b3514068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>M0017126</th>\n",
+       "      <th>M0000273</th>\n",
+       "      <th>M0001428</th>\n",
+       "      <th>M0001440</th>\n",
+       "      <th>M0000605</th>\n",
+       "      <th>M0043657</th>\n",
+       "      <th>M0000612</th>\n",
+       "      <th>M0001227</th>\n",
+       "      <th>M0001244</th>\n",
+       "      <th>M0000729</th>\n",
+       "      <th>S0059749</th>\n",
+       "      <th>S0059717</th>\n",
+       "      <th>M1004265</th>\n",
+       "      <th>M0000271</th>\n",
+       "      <th>M0001385</th>\n",
+       "      <th>M5525763</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-09-30</th>\n",
+       "      <td>49.8</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-2.3</td>\n",
+       "      <td>-2.8</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>1.8605</td>\n",
+       "      <td>2.1969</td>\n",
+       "      <td>1.7796</td>\n",
+       "      <td>97.8224</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>8.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-10-31</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>-1.7</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-2.1</td>\n",
+       "      <td>-2.7</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>1.7954</td>\n",
+       "      <td>2.0877</td>\n",
+       "      <td>1.7206</td>\n",
+       "      <td>99.7308</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-11-30</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>-1.7</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-2.1</td>\n",
+       "      <td>-2.7</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>1.8121</td>\n",
+       "      <td>2.0410</td>\n",
+       "      <td>1.7158</td>\n",
+       "      <td>99.5932</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            M0017126  M0000273  M0001428  M0001440  M0000605  M0043657  \\\n",
+       "2025-09-30      49.8      -0.5       3.0       4.5       7.9       3.1   \n",
+       "2025-10-31      49.0      -1.7       2.9       4.3      -0.3       2.7   \n",
+       "2025-11-30      49.0      -1.7       2.9       4.3      -0.3       2.7   \n",
+       "\n",
+       "            M0000612  M0001227  M0001244  M0000729  S0059749  S0059717  \\\n",
+       "2025-09-30      -0.3      -2.3      -2.8      -0.1    1.8605    2.1969   \n",
+       "2025-10-31       0.2      -2.1      -2.7      -0.1    1.7954    2.0877   \n",
+       "2025-11-30       0.2      -2.1      -2.7      -0.1    1.8121    2.0410   \n",
+       "\n",
+       "            M1004265  M0000271  M0001385  M5525763  \n",
+       "2025-09-30    1.7796   97.8224       8.4       8.7  \n",
+       "2025-10-31    1.7206   99.7308       8.2       8.5  \n",
+       "2025-11-30    1.7158   99.5932       8.2       8.5  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "macro_data_M"
    ]
   },
   {
@@ -1013,7 +1147,7 @@
    "id": "aed14f16",
    "metadata": {},
    "source": [
-    "# Macro_HF"
+    "# Macro_HF - 高频因子构建"
    ]
   },
   {
